fix all sliders spacing at the end (safari bug)

--- a/assets/base.css
+++ b/assets/base.css
@@ -1142,7 +1142,7 @@ summary::-webkit-details-marker {
   }
 
   .grid--peek.slider .grid__item:last-of-type {
-    margin-right: 1.5rem;
+    margin-right: calc(-1 * var(--grid-mobile-horizontal-spacing));
   }
 
   .grid--2-col-tablet-down .grid__item {
@@ -1176,10 +1176,6 @@ summary::-webkit-details-marker {
 
   .slider--tablet.grid--peek .grid__item:first-of-type {
     margin-left: 1.5rem;
-  }
-
-  .slider--tablet.grid--peek .grid__item:last-of-type {
-    margin-right: 1.5rem;
   }
 
   .grid--2-col-tablet-down .grid__item {
