--- a/assets/component-slider.css
+++ b/assets/component-slider.css
@@ -47,6 +47,12 @@ slider-component.slider-component-full-width {
     margin-bottom: 1rem;
   }
 
+  .slider--mobile:after {
+    content: "";
+    width: 0px;
+    padding-left: 1.5rem;
+  }
+
   .slider.slider--mobile .slider__slide {
     margin-bottom: 0;
     padding-top: max(var(--focus-outline-padding), var(--shadow-padding-top));
@@ -90,6 +96,16 @@ slider-component.slider-component-full-width {
     margin-bottom: 1rem;
   }
 
+  .slider--tablet:after {
+    content: "";
+    width: 0;
+    padding-left: 1.5rem;
+  }
+
+  .slider.slider--tablet .slider__slide:last-child {
+    margin-right: calc(-2 * var(--grid-mobile-horizontal-spacing));
+  }
+
   .slider.slider--tablet .slider__slide {
     margin-bottom: 0;
     padding-top: max(var(--focus-outline-padding), var(--shadow-padding-top));
@@ -102,6 +118,12 @@ slider-component.slider-component-full-width {
 
   .slider.slider--tablet.contains-content-container .slider__slide {
     --focus-outline-padding: 0rem;
+  }
+}
+
+@media screen and (max-width: 749px) {
+  .slider.slider--tablet .slider__slide:last-child {
+    margin-right: calc(-1 * var(--grid-mobile-horizontal-spacing));
   }
 }
 
@@ -136,6 +158,12 @@ slider-component.slider-component-full-width {
     scroll-padding-left: var(--desktop-margin-left-first-item);
   }
 
+  .slider--desktop:after {
+    content: "";
+    width: 0px;
+    padding-left: 5rem;
+  }
+
   .slider.slider--desktop .slider__slide {
     margin-bottom: 0;
     padding-top: max(var(--focus-outline-padding), var(--shadow-padding-top));
@@ -148,7 +176,7 @@ slider-component.slider-component-full-width {
   }
 
   .slider.slider--desktop .slider__slide:last-child {
-    margin-right: 5rem;
+    margin-right: calc(-1 * var(--grid-desktop-horizontal-spacing));
   }
 
   .slider-component-full-width .slider--desktop {
@@ -160,8 +188,8 @@ slider-component.slider-component-full-width {
     scroll-margin-left: 1.5rem;
   }
 
-  .slider-component-full-width .slider--desktop .slider__slide:last-child {
-    margin-right: 1.5rem;
+  .slider-component-full-width .slider--desktop:after {
+    padding-left: 1.5rem;
   }
 
   .slider--desktop.grid--5-col-desktop .grid__item {
