--- a/assets/section-main-product.css
+++ b/assets/section-main-product.css
@@ -531,16 +531,6 @@ a.product__text {
   display: block;
 }
 
-@media screen and (max-width: 749px) {
-  .product__media-item--variant:nth-last-child(2):is(.product__media-item--variant) {
-    padding-right: 1.5rem;
-  }
-
-  .product__media-item--variant:first-child {
-    display: flex;
-  }
-}
-
 @media screen and (min-width: 750px) and (max-width: 989px) {
   .product__media-list .product__media-item:first-child {
     padding-left: 0;
